Fixed some minor changes on the chat box responsiveness so the text wraps adequately, Implemented a growable text area instead of a content editable, Allowed the user to submit new chat messages to the set text box. Also added React Router detect to handle responsiveness and some fixes for the warnings shown

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,17 +12,12 @@ h2 {
 .content-height {
   height: calc(100vh - 3rem);
 }
-div[contenteditable] {
-  max-height: 66px;
-  overflow: auto;
+
+.chat-box-actions textarea {
+  width: 100%;
+  background-color: inherit;
 }
 
-div [contenteditable][placeholder]:empty:before {
-  content: attr(placeholder);
-  position: absolute;
-  color: gray;
-  background-color: transparent;
-}
-[contenteditable] {
+.chat-box-actions textarea:active {
   outline-color: #9147ff;
 }
